--- a/tapl.cabal
+++ b/tapl.cabal
@@ -20,9 +20,12 @@ library
     import:           warnings
     exposed-modules:  
         Subtyping
+        LambdaArrow
     -- other-modules:
     -- other-extensions:
-    build-depends:    base ^>=4.21.0.0
+    build-depends:    
+        , base
+        , containers
     hs-source-dirs:   src
     default-language: GHC2024
 
@@ -32,7 +35,7 @@ executable tapl
     -- other-modules:
     -- other-extensions:
     build-depends:
-        base ^>=4.21.0.0,
+        base,
         tapl
 
     hs-source-dirs:   app
@@ -47,5 +50,5 @@ test-suite tapl-test
     hs-source-dirs:   test
     main-is:          Main.hs
     build-depends:
-        base ^>=4.21.0.0,
+        base,
         tapl
