--- a/tapl.cabal
+++ b/tapl.cabal
@@ -21,6 +21,9 @@ library
     exposed-modules:  
         Subtyping
         LambdaArrow
+        SystemF
+        SystemFSub
+        SystemFSubOmega
     -- other-modules:
     -- other-extensions:
     build-depends:    
